--- a/collstyle.css
+++ b/collstyle.css
@@ -119,7 +119,7 @@ nav {
     border-radius: 5px;
     border: 1px solid #a09d9d;
     outline: none;
-    text-transform: uppercase;
+    text-transform: capitalize;
 }
 
 .input-box input::placeholder {
