--- a/collstyle.css
+++ b/collstyle.css
@@ -114,7 +114,8 @@ nav {
     font-size: 14px;
 }
 
-.input-box input {
+.input-box input ,
+select {
     padding: 9px;
     border-radius: 5px;
     border: 1px solid #a09d9d;
@@ -127,7 +128,8 @@ nav {
     color: #2e2c2c;
 }
 
-.input-box input {
+.input-box input ,
+select {
     font-size: 13px;
     font-weight: 400;
     color: #0c0b0b;
